log/build_2025-09-26_17-30-29/igusgus/stderr.log
  File "/home/amrl-linux24-04/ros2_ben/install/igusgus/lib/python3.12/site-packages/igusgus/pub_3d.py", line 218
    self.tool_coord.publish(tool_pose)
    ^^^^
SyntaxError: expected 'except' or 'finally' block

